[gd_scene load_steps=2 format=2]

[ext_resource path="res://accesorios/menu/network_test_client_01/network_connect_test_01.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="text_connect_ip" type="TextEdit" parent="."]
margin_left = 400.0
margin_top = 14.0
margin_right = 626.0
margin_bottom = 53.0

[node name="text_connect_port" type="TextEdit" parent="."]
margin_left = 400.0
margin_top = 78.0
margin_right = 626.0
margin_bottom = 117.0

[node name="button_connect" type="Button" parent="."]
margin_left = 518.0
margin_top = 140.0
margin_right = 623.0
margin_bottom = 177.0
text = "connect"

[node name="button_disconnect" type="Button" parent="."]
margin_left = 400.0
margin_top = 140.0
margin_right = 505.0
margin_bottom = 177.0
text = "disconnect"

[node name="button_leave" type="Button" parent="."]
margin_left = 89.0
margin_top = 415.0
margin_right = 134.0
margin_bottom = 448.0
text = "BACK CONNECTIONS"

[connection signal="pressed" from="button_connect" to="." method="_on_button_connect_pressed"]
[connection signal="pressed" from="button_leave" to="." method="_on_button_leave_pressed"]
